--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
-<p><%= @task.completed %></p>
+<p><%= check_box("task", @task.id, {checked: @task.completed}) %></p>
 <h3><%= link_to 'Edit task', edit_task_path %></h3>
 <h3><%= link_to 'Back', tasks_path(@tasks) %></h3
